syntax = "proto3";

option java_package = "com.proto.saludo";

message SaludoRequest {
    string message = 1;
}

message SaludoResponse {
    string resultado = 1;
}

message Archivote{
    string archivote = 1;
}

service SaludoService{
    rpc saludo(SaludoRequest) returns (SaludoResponse);
    rpc saludoStream(SaludoRequest) returns (stream SaludoResponse);
    rpc leerArchivo(SaludoRequest) returns (stream Archivote);
}